# BlenderTemplate

./: .GenerateDocs.bat  .gitignore  README.md  __init__.py  blender_manifest.toml  env.req
blender-example-addon/: README.md  pyproject.toml
blender-example-addon/docs/: Makefile  conf.py  index.rst
blender-example-addon/src/: __init__.py  blender_manifest.toml
blender-example-addon/src/examples/: example_class.py
docs/: BlenderTemplate.html  BlenderTemplate.src.example_class.Animal.html  BlenderTemplate.src.example_class.Cat.html  BlenderTemplate.src.example_class.Dog.html  BlenderTemplate.src.example_class.html  BlenderTemplate.src.html  all-documents.html  apidocs-help.html  classIndex.html  fullsearchindex.json  moduleIndex.html  nameIndex.html  objects.inv  searchindex.json  undoccedSummary.html
scripts/: ActivateEnvironment.bat  CahceEnvironment.bat
src/: __init__.py  example_class.py
