[project]
name = "blender-example-addon"
version = "0.1.0"
description = "A simple example of a Blender addon"
authors = [{ name = "Jon", email = "jonlangforduk@gmail.com" }]
readme = "README.md"

[tool.poetry]
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.2.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
