[project]
name = "blender-example-addon"
version = "0.1.0"
description = "A simple example of a Blender addon"
authors = [{ name = "Jon", email = "jonlangforduk@gmail.com" }]
readme = "README.md"

[tool.poetry]
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.2.3"
toml = "^0.10.2"

[tool.poetry.dev-dependencies]
sphinx = "^8.2.3"
sphinx-autodoc-typehints = "^3.1.0"
sphinx-rtd-theme = "^3.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
